--- a/index.html
+++ b/index.html
@@ -1,48 +1,25 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đại Việt Sử Ký Quiz</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        serif: ['Merriweather', 'serif'],
-                        sans: ['Roboto', 'sans-serif'],
-                    },
-                    colors: {
-                        'history-red': '#8B1E1E',
-                        'history-gold': '#D4AF37',
-                        'history-paper': '#F5E6D3',
-                        'history-dark': '#2C241B',
-                    }
-                }
-            }
-        }
-    </script>
-    <style>
-        body {
-            background-color: #2C241B;
-            color: #F5E6D3;
-        }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
-  }
-}
-</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Minigame Trắc nghiệm</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: #f5f5f5;
+      font-family: Arial, sans-serif;
+    }
+    iframe {
+      width: 100vw;
+      height: 100vh;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-    <div id="root"></div>
+  <iframe src="https://ai.studio/apps/drive/1loUFF7q34OdboPUeYciZbkEsGUeAfi32?fullscreenApplet=true"></iframe>
 </body>
 </html>
